tests/errors/attribute-derive-eq-enum-payload.ari
@derive(Eq)
enum Value {
  Number(i64),
}

fn main() -> i64 {
  return 0;
}
